tests/baselines/reference/parserErrorRecoveryIfStatement3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/IfStatements/parserErrorRecoveryIfStatement3.ts (2 errors) ====
    class Foo {
      f1() {
        if (a.b
            ~
!!! error TS2304: Cannot find name 'a'.
      }
      ~
!!! error TS1005: ')' expected.
      f2() {
      }
      f3() {
      }
    }